# CG

./: .gitignore  README.md
1ª Fase/: Relatório 1ª Fase.docx  box.3d
1ª Fase/engine/: main.cpp
1º Fase/: CMakeLists.txt  Relatório 1ª Fase.docx  box.3d  cone.3d  example.xml  plane.3d  sphere.3d
1º Fase/engine/: CMakeLists.txt  main.cpp
1º Fase/generator/: CMakeLists.txt  main.cpp
2ª Fase/demos/: solarSystem.xml
2ª Fase/engine/: main.cpp
2ª Fase/generator/: main.cpp
2º Fase/: cone.3d  example.xml  example2.xml
2º Fase/demos/: example1.xml  example2.xml  planet.3d  solarSystem.xml  sphere.3d
2º Fase/engine/: main.cpp  planet.3d  solarSystemAux.xml
3ª Fase/engine/: main.cpp
3ª Fase/generator/: main.cpp
3º Fase/: example2.xml  teapot.3d
3º Fase/engine/: CMakeLists.txt  main.cpp  solarSystem.xml  testeBezier.xml
3º Fase/generator/: main.cpp
4ª Fase/: teapot.3d
4ª Fase/engine/: CMakeLists.txt  main.cpp  planet.3d  solarSystem.xml
4ª Fase/generator/: CMakeLists.txt  main.cpp
